tests/NormalTests/paczka1/small_fuzzy/14958276.err
Error in line 1: 6SPXQmHD4 S761 12,3
Error in line 5: zOdfIr7Pbj1 A676 46,3
Error in line 15: zOdfIr7Pbj1 A303 23,0
